--- a/source/less/collaboration.less
+++ b/source/less/collaboration.less
@@ -26,6 +26,11 @@
   justify-content: space-between;
 }
 
+.collaboration__google-map {
+  display: block;
+  border: none;
+}
+
 @media (min-width: @tablet-width) {
   .collaboration__wrapper {
     padding: 0;
