--- a/source/less/footer.less
+++ b/source/less/footer.less
@@ -18,12 +18,13 @@
 
 .footer__logo {
   margin-top: 39px;
-  margin-bottom: 53px;
+  margin-bottom: 32px;
   text-align: center;
 }
 
 .footer__social {
-  margin-bottom: 49px;
+  margin-bottom: 20px;
+  margin-top: 20px;
   padding: 3px 4px 2px 2px;
 }
 
