--- a/source/less/live-example.less
+++ b/source/less/live-example.less
@@ -41,6 +41,8 @@
 
 .live-example__statistic {
   display: flex;
+  flex-wrap: wrap;
+  justify-content: center;
 }
 
 @media (min-width: @tablet-width) {
