--- a/source/less/module.less
+++ b/source/less/module.less
@@ -22,12 +22,16 @@
   text-transform: uppercase;
 }
 
+.module__text--result:first-child {
+  margin-right: 2px;
+}
+
 .module__description {
   display: flex;
 }
 
 .module__description--result {
-  margin-top: 20px;
+  margin-top: 32px;
 }
 
 .module__description:not(:last-child) {
