--- a/source/less/style.less
+++ b/source/less/style.less
@@ -10,6 +10,7 @@
 @import "catalog-program";
 @import "advantages";
 @import "live-example";
+@import "cat-comparison";
 @import "range-bar";
 @import "module";
 @import "collaboration";
