--- a/source/less/catalog-program.less
+++ b/source/less/catalog-program.less
@@ -3,59 +3,44 @@
   background-color: @white;
 }
 
-.catalog-program__list {
-  list-style-type: none;
-  margin: 0;
-  padding: 0;
-}
-
 .catalog-program__item {
   background-color: rgba(242, 242, 242, 1);
-  padding: 30px 33px 18px 20px;
+  padding: 24px 33px 18px 20px;
   margin-bottom: 20px;
 }
 
-.catalog-program__item::before {
-  content: "";
-  position: absolute;
+.catalog-program__icon {
+  margin-right: 19px;
   background-color: @basic-green;
-  top: 24px;
-  left: 22px;
   width: 50px;
   height: 50px;
   border-radius: 50%;
 }
 
-.catalog-program__item--cat-slim {
+.catalog-program__icon--cat-slim {
   position: relative;
 }
 
-.catalog-program__item--cat-pro {
+.catalog-program__icon--cat-slim::after {
+  content: url("../img/cat-slim.svg");
+  position: absolute;
+  top: -3px;
+  right: 7px;
+}
+
+.catalog-program__icon--cat-pro {
   position: relative;
 }
 
-.catalog-program__item--cat-slim::after {
-  content: "";
+.catalog-program__icon--cat-pro::after {
+  content: url("../img/cat-pro.svg");
   position: absolute;
-  width: 36px;
-  height: 50px;
-  top: 21px;
-  left: 29px;
-  background-image: url("../img/cat-slim.svg");
-}
-
-.catalog-program__item--cat-pro::after {
-  content: "";
-  position: absolute;
-  width: 67px;
-  height: 28px;
-  top: 35px;
-  left: 12px;
-  background-image: url("../img/cat-pro.svg");
+  top: 11px;
+  right: -5px;
 }
 
 .catalog-program__title {
-  margin: 0 0 29px 0;
+  margin: 0;
   font-family: inherit;
   font-weight: 400;
   font-size: 24px;
@@ -63,6 +48,12 @@
   text-transform: uppercase;
   color: @black;
   text-align: center;
+}
+
+.catalog-program__wrapper-title {
+  display: flex;
+  align-items: center;
+  margin-bottom: 22px;
 }
 
 .catalog-program__text {
@@ -96,6 +87,7 @@
   left: 100px;
   background-image: url("../img/arrow.svg");
 }
+
 //ПЛАНШЕТ
 @media (min-width: @tablet-width) {
   .catalog-program__wrapper {
@@ -107,42 +99,46 @@
     margin-bottom: 30px;
   }
 
-  .catalog-program__item::before {
-    content: "";
-    position: absolute;
+  .catalog-program__icon {
+    display: none;
+  }
+
+  .catalog-program__wrapper-icon-tablet {
+    display: flex;
+    justify-content: space-between;
+    align-items: center;
+  }
+
+  .catalog-program__icon-tablet {
+    position: relative;
     background-color: @basic-green;
-    top: 90px;
-    right: 60px;
-    left: auto;
     width: 200px;
     height: 200px;
     border-radius: 50%;
   }
 
-  .catalog-program__item--cat-slim::after {
-    content: "";
+  .catalog-program__icon--cat-slim-tablet::after {
     position: absolute;
-    width: 140px;
+    content: "";
     height: 194px;
-    top: 81px;
-    left: auto;
-    right: 92px;
+    width: 140px;
+    left: 30px;
+    top: -8px;
     background-image: url("../img/cat-slim.svg");
     background-repeat: no-repeat;
     background-size: cover;
   }
 
-  .catalog-program__item--cat-pro::after {
-    content: "";
+  .catalog-program__icon--cat-pro-tablet::after {
     position: absolute;
-    width: 268px;
+    content: "";
     height: 112px;
-    top: 135px;
-    left: auto;
-    right: 28px;
-    background-image: url("../img/cat-pro.svg");
+    width: 268px;
+    left: -50px;
+    top: 40px;
     background-repeat: no-repeat;
     background-size: cover;
+    background-image: url("../img/cat-pro.svg");
   }
 
   .catalog-program__title {
@@ -152,10 +148,11 @@
   }
 
   .catalog-program__text {
-    margin: 24px 316px 52px 0;
+    margin: 0;
     font-size: 16px;
     line-height: 24px;
     color: @black;
+    width: 340px;
   }
 
   .catalog-program__toggle {
@@ -170,7 +167,11 @@
     height: 12px;
     top: 10px;
     left: 133px;
-    background-image: url("../img/arrow.svg");
+    background-image: url(" ../img/arrow.svg ");
+  }
+
+  .catalog-program__wrapper-title {
+    margin: 0;
   }
 }
 
@@ -210,7 +211,7 @@
     height: 97px;
     top: 41px;
     left: 67px;
-    background-image: url("../img/cat-slim.svg");
+    background-image: url(" ../img/cat-slim.svg ");
   }
 
   .catalog-program__item--cat-pro::after {
@@ -220,7 +221,7 @@
     height: 56px;
     top: 67px;
     left: 33px;
-    background-image: url("../img/cat-pro.svg");
+    background-image: url(" ../img/cat-pro.svg ");
   }
 
   .catalog-program__title {
@@ -249,6 +250,6 @@
     height: 12px;
     top: 9px;
     left: 136px;
-    background-image: url("../img/arrow.svg");
+    background-image: url(" ../img/arrow.svg ");
   }
 }
