--- a/source/less/logotype.less
+++ b/source/less/logotype.less
@@ -11,3 +11,11 @@
     display: block;
   }
 }
+
+@media (min-width: @desktop-width) {
+  .logotype__logo-cat--tablet {
+    height: 59px;
+    width: 202px;
+  }
+
+}
