--- a/source/less/main-header.less
+++ b/source/less/main-header.less
@@ -1,12 +1,14 @@
 .main-header__wrapper {
-  padding: 10px 20px 15px 20px;
+  padding: 10px 20px 17px 20px;
   display: flex;
   justify-content: space-between;
   align-items: center;
+  height: 65px;
+  box-sizing: border-box;
 }
 
 .main-header__nav {
-  display: none;
+  display: block;
 }
 
 @media (min-width: @tablet-width) {
