--- a/source/less/main-nav.less
+++ b/source/less/main-nav.less
@@ -1,5 +1,7 @@
 .main-nav {
-  width: 100%;
+  position: relative;
+  width: auto;
+  background-color: @white;
 }
 
 .main-nav__item {
@@ -20,6 +22,14 @@
   min-height: 66px;
   text-align: center;
   padding: 22px 0 24px 0;
+}
+
+.main-nav__toggle {
+  border: none;
+  background-color: @white;
+  z-index: 2;
+  display: block;
+  cursor: pointer;
 }
 
 @media (min-width: @tablet-width) {
@@ -43,6 +53,10 @@
     min-height: auto;
     text-align: center;
     padding: 0;
+  }
+
+  .main-nav__toggle {
+    display: none;
   }
 }
 
