--- a/source/less/catalog-program.less
+++ b/source/less/catalog-program.less
@@ -187,45 +187,16 @@
 
   .catalog-program__item {
     flex: 1;
+    padding: 47px 52px 60px 52px;
+    margin: 0;
   }
 
   .catalog-program__item:not(:last-child) {
     margin-right: 80px;
   }
 
-  .catalog-program__item::before {
-    content: "";
-    position: absolute;
-    background-color: @basic-green;
-    top: 47px;
-    left: 52px;
-    width: 100px;
-    height: 100px;
-    border-radius: 50%;
-  }
-
-  .catalog-program__item--cat-slim::after {
-    content: "";
-    position: absolute;
-    width: 70px;
-    height: 97px;
-    top: 41px;
-    left: 67px;
-    background-image: url(" ../img/cat-slim.svg ");
-  }
-
-  .catalog-program__item--cat-pro::after {
-    content: "";
-    position: absolute;
-    width: 134px;
-    height: 56px;
-    top: 67px;
-    left: 33px;
-    background-image: url(" ../img/cat-pro.svg ");
-  }
-
   .catalog-program__title {
-    margin: 0 0 73px 0;
+    margin: 0;
     font-size: 36px;
     line-height: 36px;
     text-align: center;
@@ -236,6 +207,7 @@
     font-size: 16px;
     line-height: 24px;
     color: @black;
+    width: auto;
   }
 
   .catalog-program__toggle {
@@ -251,5 +223,45 @@
     top: 9px;
     left: 136px;
     background-image: url(" ../img/arrow.svg ");
+  }
+
+  .catalog-program__icon-tablet {
+    display: none;
+  }
+
+  .catalog-program__icon {
+    position: relative;
+    display: block;
+    width: 100px;
+    height: 100px;
+    margin-right: 62px;
+  }
+
+  .catalog-program__icon--cat-slim::after {
+    position: absolute;
+    content: "";
+    height: 97px;
+    width: 70px;
+    left: 14px;
+    top: -7px;
+    background-image: url("../img/cat-slim.svg");
+    background-repeat: no-repeat;
+    background-size: cover;
+  }
+
+  .catalog-program__icon--cat-pro::after {
+    position: absolute;
+    content: "";
+    height: 56px;
+    width: 134px;
+    left: -23px;
+    top: 20px;
+    background-image: url("../img/cat-pro.svg");
+    background-repeat: no-repeat;
+    background-size: cover;
+  }
+
+  .catalog-program__wrapper-title {
+    margin-bottom: 40px;
   }
 }
