адаптивная сетка для блока живой пример

--- a/source/less/live-example.less
+++ b/source/less/live-example.less
@@ -58,14 +58,23 @@
   .live-example__title {
     font-size: 60px;
     line-height: 60px;
+    margin-right: 30px;
+    margin-left: 30px;
   }
 
   .live-example__text {
-    margin: 63px 0 54px 0;
+    margin: 63px 30px 54px 30px;
     font-size: 16px;
     line-height: 24px;
   }
-}
+
+  .live-example__statistic {
+    justify-content: flex-start;
+    margin-right: 30px;
+    margin-left: 30px;
+    margin-bottom: 160px;
+  }
+  }
 
 @media (min-width: @desktop-width) {
   .live-example__wrapper {
@@ -87,10 +96,17 @@
     font-size: 60px;
     line-height: 60px;
     margin-bottom: 76px;
+    margin-left: 110px;
+    margin-right: 110px;
   }
 
   .live-example__text {
-    font-size: 16px;
-    line-height: 24px;
+    margin: 70px 110px;
+    width: 436px;
   }
+
+  .live-example__statistic {
+    margin-left: 110px;
+  }
+
 }
