--- a/source/less/promo.less
+++ b/source/less/promo.less
@@ -33,9 +33,9 @@
   text-align: center;
 }
 
-.promo__image {
+.promo__image--mobile {
   position: absolute;
-  top: 195px;
+  top: 165px;
   left: 55px;
 }
 
@@ -89,7 +89,7 @@
     text-align: left;
   }
 
-  .promo__image {
+  .promo__image--mobile {
     display: none;
   }
 
@@ -102,7 +102,7 @@
   .promo__button-wrapper {
     padding: 30px 90px 550px 90px;
     margin: 0 30px 0 30px;
-    background-image: url("../img/promo-cat-energy.png");
+    background-image: url("../img/promo-cat-energy-tablet.png");
     background-position: center;
     background-size: contain;
     background-repeat: no-repeat;
