--- a/source/less/main-nav.less
+++ b/source/less/main-nav.less
@@ -1,17 +1,25 @@
 .main-nav {
-  position: relative;
   width: auto;
+  min-height: 66px;
+  background-color: @basic-green;
+}
+
+.main-nav__list {
+  position: fixed;
+  z-index: 4;
+  left: 0;
+  right: 0;
+  top: 66px;
+  width: 100%;
   background-color: @white;
 }
 
-.main-nav__item {
-  margin: 0;
-  width: 100%;
-}
-
 .main-nav__link {
+  padding-top: 22px;
+  padding-bottom: 24px;
+  padding-left: 20px;
+  position: relative;
   display: block;
-  cursor: pointer;
   font-family: inherit;
   font-weight: 500;
   font-size: 20px;
@@ -19,17 +27,65 @@
   text-transform: uppercase;
   text-decoration: none;
   color: @black;
-  min-height: 66px;
   text-align: center;
-  padding: 22px 0 24px 0;
 }
 
 .main-nav__toggle {
-  border: none;
-  background-color: @white;
+  position: absolute;
+  top: -3px;
+  right: 20px;
   z-index: 2;
   display: block;
+  height: 66px;
+  background-color: @white;
   cursor: pointer;
+  border: none;
+}
+
+.main-nav--closed .main-nav__toggle::before {
+  content: "";
+  position: absolute;
+  top: 15px;
+  left: 17px;
+  height: 66px;
+  background-color: #ffffff;
+}
+
+.main-nav--opened .main-nav__burger {
+  display: none;
+}
+
+.main-nav--opened .main-nav__toggle {
+  top: 0;
+  right: 0;
+  left: auto;
+}
+
+.main-nav--opened .main-nav__toggle::before,
+.main-nav--opened .main-nav__toggle::after {
+  content: "";
+  position: absolute;
+  top: 24px;
+  right: 24px;
+  width: 25px;
+  height: 1.5px;
+  background-color: @black;
+}
+
+.main-nav--opened .main-nav__toggle::before {
+  transform: rotate(45deg);
+}
+
+.main-nav--opened .main-nav__toggle::after {
+  transform: rotate(-45deg);
+}
+
+.main-nav--closed .main-nav__wrapper {
+  display: none;
+}
+
+.main-nav--opened .main-nav__wrapper {
+  display: block;
 }
 
 @media (min-width: @tablet-width) {
