--- a/source/less/promo.less
+++ b/source/less/promo.less
@@ -134,9 +134,25 @@
 
 @media (min-width: @desktop-width) {
   .promo__wrapper {
-    display: grid;
-    grid-template-columns: 1fr 1fr;
+    position: relative;
     padding: 0;
+    padding-left: 190px;
+    padding-top: 114px;
+    padding-bottom: 82px;
+  }
+
+  .promo__wrapper::before {
+    content: "";
+    position: absolute;
+    top: -112px;
+    right: 0;
+    background: linear-gradient(to right, rgba(104, 183, 56, 0.85), rgba(104, 183, 56, 0.85)), url("../img/index-background-desktop.png");
+    background-repeat: no-repeat;
+    background-position: top;
+    background-color: @basic-green;
+    background-size: cover;
+    width: 50%;
+    height: 694px;
   }
 
   .promo__image--tablet {
@@ -145,6 +161,9 @@
 
   .promo__image--desktop {
     display: block;
+    position: absolute;
+    top: 0;
+    left: 558px;
   }
 
   .promo__title {
@@ -152,12 +171,23 @@
     font-size: 60px;
     line-height: 60px;
     margin-bottom: 40px;
+    margin-left: 0;
   }
 
   .promo__subtitle {
     font-size: 20px;
     line-height: 20px;
     text-align: left;
+    margin-left: 0;
+  }
+
+  .main-nav__link {
+    color: @white;
+  }
+
+  .promo__button-choose-program {
+    margin-top: 52px;
+    margin-left: 0;
   }
 }
 
