доработка меню навигации

--- a/source/less/main-nav.less
+++ b/source/less/main-nav.less
@@ -124,6 +124,12 @@
 @media (min-width: @desktop-width) {
   .main-nav {
     min-width: 480px;
+    background-color: transparent;
+    z-index: 6;
+  }
+
+  .main-nav__list {
+    background-color: transparent;
   }
 
   .main-nav__link {
