декоративные стили для карточек каталога

--- a/source/less/additional-products.less
+++ b/source/less/additional-products.less
@@ -9,7 +9,7 @@
   font-weight: 400;
   font-size: 24px;
   line-height: 24px;
-  text-align: center;
+  text-align: left;
   color: @black;
 }
 
@@ -82,7 +82,6 @@
   background-repeat: no-repeat;
   background-position: top;
   background-size: cover;
-  padding: 187px 61px 43px 58px;
 }
 
 .bonus-prize__title {
@@ -92,6 +91,13 @@
   line-height: 20px;
   text-align: center;
   color: @white;
+  margin: 0;
+  margin-bottom: 43px;
+}
+
+.additional-products__icon {
+  margin-bottom: 60px;
+  margin-top: 60px;
 }
 
 @media (min-width: @tablet-width) {
@@ -108,7 +114,6 @@
 
   .additional-products__cards {
     margin: 70px 0;
-
   }
 
   .additional-products__item {
