--- a/source/less/catalog-product-cards.less
+++ b/source/less/catalog-product-cards.less
@@ -1,16 +1,18 @@
 .catalog-product-cards__wrapper {
-  padding: 27px 20px 0 20px;
+  padding: 0 20px 0 20px;
   background-color: @white;
 }
 
 .catalog-product-cards__title {
   margin: 0;
+  padding-top: 27px;
   font-family: inherit;
   font-weight: 400;
   font-size: 36px;
   line-height: 36px;
   color: @black;
   margin-bottom: 41px;
+  border-top: 1px solid #d9d9d9;
 }
 
 .catalog-product-cards__list {
@@ -21,7 +23,28 @@
 }
 
 .catalog-product-cards__all-catalog {
-  padding: 78px 20px 25px 20px;
+  position: relative;
+  padding: 78px 0 25px 0;
+}
+
+.catalog-product-cards__all-catalog::before {
+  content: "";
+  position: absolute;
+  width: 2px;
+  height: 30px;
+  background-color: #d3d3d3;
+  top: 25px;
+  left: 50%;
+}
+
+.catalog-product-cards__all-catalog::after {
+  content: "";
+  position: absolute;
+  width: 30px;
+  height: 2px;
+  background-color: #d3d3d3;
+  top: 40px;
+  left: calc(50% - 15px);
 }
 
 @media (min-width: @tablet-width) {
