--- a/source/less/product-card.less
+++ b/source/less/product-card.less
@@ -2,6 +2,7 @@
   display: grid;
   grid-template-columns: 50% 50%;
   grid-template-rows: 1fr 1fr 1fr;
+  min-height: 209px;
 }
 
 .product-card__title {
@@ -14,6 +15,7 @@
   color: @dark-grey;
   grid-column-start: 2;
   grid-row-start: 1;
+  margin-top: 19px;
 }
 
 .product-card__details {
@@ -24,6 +26,14 @@
   color: @text-grey;
   grid-column-start: 2;
   grid-row-start: 2;
+}
+
+.product-card__details td:first-child {
+  text-align: left;
+}
+
+.product-card__details td:last-child {
+  text-align: right;
 }
 
 .product-card__button-order {
@@ -43,6 +53,7 @@
   grid-row-start: 3;
   grid-column-start: 1;
   grid-column-end: 3;
+  margin-top: 22px;
 }
 
 .product-card__icon {
@@ -50,6 +61,7 @@
   grid-row-start: 1;
   grid-row-end: 3;
   justify-self: center;
+  margin-top: 33px;
 }
 
 @media (min-width: @tablet-width) {
