--- a/source/less/main-nav.less
+++ b/source/less/main-nav.less
@@ -32,11 +32,11 @@
 
 .main-nav__toggle {
   position: absolute;
-  top: -3px;
+  top: 25px;
   right: 20px;
   z-index: 2;
   display: block;
-  height: 66px;
+  height: 16px;
   background-color: @white;
   cursor: pointer;
   border: none;
@@ -95,7 +95,7 @@
   .main-nav {
     min-width: 440px;
     min-height: auto;
-    background-color: @white;
+    background-color: @black;
   }
 
   .main-nav__list {
