--- a/source/less/style.less
+++ b/source/less/style.less
@@ -18,6 +18,7 @@
 @import "copyright";
 @import "footer-social";
 @import "logotype";
+@import "composition";
 
 //страница каталога
 @import "catalog-product-cards";
