--- a/source/less/additional-products.less
+++ b/source/less/additional-products.less
@@ -84,7 +84,7 @@
   background-size: cover;
 }
 
-.bonus-prize__title {
+.additional-products__bonus-title {
   font-family: "Arial", sans-serif;
   font-weight: 400;
   font-size: 16px;
@@ -92,12 +92,12 @@
   text-align: center;
   color: @white;
   margin: 0;
-  margin-bottom: 43px;
+  padding-bottom: 43px;
 }
 
 .additional-products__icon {
-  margin-bottom: 60px;
-  margin-top: 60px;
+  margin: 60px auto;
+  width: 100%;
 }
 
 @media (min-width: @tablet-width) {
@@ -159,8 +159,23 @@
   }
 
   .additional-products__bonus {
+    display: flex;
+    justify-content: space-between;
+    align-items: center;
     background-size: cover;
     background-position: center;
+  }
+
+  .additional-products__icon {
+    margin-left: 77px;
+    margin-right: 0;
+    width: 57px;
+    height: auto;
+  }
+
+  .additional-products__bonus-title {
+    padding: 0;
+    margin-right: 124px;
   }
 }
 
@@ -204,7 +219,17 @@
   }
 
   .additional-products__bonus {
+    flex-direction: column;
     margin-left: 80px;
+  }
+
+  .additional-products__bonus-title {
+    padding: 0;
+    margin: 43px 43px;
+  }
+
+  .additional-products__icon {
+    margin: 60px auto;
   }
 }
 
