--- a/source/less/all-catalog.less
+++ b/source/less/all-catalog.less
@@ -34,3 +34,67 @@
   text-transform: uppercase;
   color: @text-grey;
 }
+
+.all-catalog {
+  position: relative;
+  padding: 78px 0 25px 0;
+}
+
+.all-catalog::before {
+  content: "";
+  position: absolute;
+  width: 2px;
+  height: 30px;
+  background-color: #d3d3d3;
+  top: 25px;
+  left: 50%;
+}
+
+.all-catalog::after {
+  content: "";
+  position: absolute;
+  width: 30px;
+  height: 2px;
+  background-color: #d3d3d3;
+  top: 40px;
+  left: calc(50% - 15px);
+}
+
+@media (min-width: @tablet-width) {
+  .all-catalog {
+    display: flex;
+    flex-direction: column;
+    padding: 40px 40px;
+    border: 2px solid @basic-grey;
+  }
+
+  .all-catalog__title {
+    margin-top: 150px;
+    padding-left: 50px;
+    padding-right: 50px;
+    font-size: 20px;
+    line-height: 22px;
+  }
+
+  .all-catalog__subtitle {
+    margin-top: 23px;
+    font-size: 16px;
+    line-height: 18px;
+  }
+
+  .all-catalog__button {
+    margin-top: auto;
+  }
+
+  .all-catalog::before {
+    height: 60px;
+    top: 52px;
+  }
+
+  .all-catalog::after {
+    width: 60px;
+    top: 82px;
+    left: calc(50% - 30px);
+  }
+}
+
