--- a/source/less/product-card.less
+++ b/source/less/product-card.less
@@ -1,8 +1,16 @@
 .product-card__item {
-  display: grid;
-  grid-template-columns: 50% 50%;
-  grid-template-rows: 1fr 1fr 1fr;
-  min-height: 209px;
+  display: flex;
+  flex-wrap: wrap;
+}
+
+.product-card__icon {
+  width: 50%;
+  text-align: center;
+  align-self: end;
+}
+
+.product-card__info {
+  width: 50%;
 }
 
 .product-card__title {
@@ -13,9 +21,9 @@
   line-height: 20px;
   text-transform: uppercase;
   color: @dark-grey;
-  grid-column-start: 2;
-  grid-row-start: 1;
-  margin-top: 19px;
+  padding-top: 19px;
+  padding-bottom: 14px;
+  padding-right: 45px;
 }
 
 .product-card__details {
@@ -24,16 +32,6 @@
   font-size: 12px;
   line-height: 16px;
   color: @text-grey;
-  grid-column-start: 2;
-  grid-row-start: 2;
-}
-
-.product-card__details td:first-child {
-  text-align: left;
-}
-
-.product-card__details td:last-child {
-  text-align: right;
 }
 
 .product-card__button-order {
@@ -44,61 +42,54 @@
   line-height: 20px;
   text-align: center;
   text-transform: uppercase;
+  text-decoration: none;
   color: @white;
   background-color: rgba(104, 183, 56, 1);
   min-height: 40px;
   width: 100%;
   border: none;
-  padding: 0;
-  grid-row-start: 3;
-  grid-column-start: 1;
-  grid-column-end: 3;
+  padding-top: 10px;
+  padding-bottom: 10px;
   margin-top: 22px;
-}
-
-.product-card__icon {
-  display: block;
-  grid-row-start: 1;
-  grid-row-end: 3;
-  justify-self: center;
-  margin-top: 33px;
+  margin-bottom: 25px;
 }
 
 @media (min-width: @tablet-width) {
   .product-card__item {
-    grid-template-columns: 1fr 1fr;
-    grid-template-rows: 1fr 1fr 1fr 1fr;
+    display: flex;
+    flex-direction: column;
+    align-items: center;
     background-color: @basic-grey;
+    padding: 40px 40px;
+    box-sizing: border-box;
   }
 
   .product-card__title {
+    margin-bottom: 21px;
+    padding: 0;
     font-size: 20px;
     line-height: 24px;
-    justify-self: center;
-    grid-row-start: 2;
-    grid-column-start: 1;
-    grid-column-end: 4;
+    text-align: center;
+  }
+
+  .product-card__info {
+    width: 100%;
   }
 
   .product-card__details {
     font-size: 16px;
     line-height: 16px;
-    grid-row-start: 3;
-    grid-column-start: 1;
-    grid-column-end: 4;
   }
 
   .product-card__button-order {
-    grid-row-start: 4;
-    grid-column-start: 1;
-    grid-column-end: 4;
+    margin-bottom: 0;
+    margin-top: 33px;
   }
 
   .product-card__icon {
-    justify-self: center;
-    grid-row-start: 1;
-    grid-column-start: 1;
-    grid-column-end: 4;
+    align-self: center;
+    margin-top: -90px;
+    margin-bottom: 34px;
   }
 }
 
