--- a/source/less/additionally.less
+++ b/source/less/additionally.less
@@ -1,14 +1,22 @@
 .additionally__form {
   border: none;
+  padding: 0;
+  margin: 0;
 }
 
 .additionally__buy-more {
+  margin: 0;
+  display: inline-block;
+  padding-right: 22px;
   font-family: inherit;
   font-weight: 400;
   font-size: 24px;
   line-height: 26px;
   color: @black;
-  margin-bottom: 34px;
+}
+
+.additionally__list {
+  padding: 34px 0;
 }
 
 .additionally__item {
@@ -30,7 +38,22 @@
   .additionally__buy-more {
     font-size: 36px;
     line-height: 36px;
-    margin-bottom: 55px;
+    padding-right: 40px;
+  }
+
+  .additionally__wrapper {
+    position: relative;
+  }
+
+  .additionally__wrapper::before {
+    content: "";
+    position: absolute;
+    width: 100%;
+    height: 2px;
+    top: 50%;
+    background-color: #68b738;
+    right: 100%;
+    margin-right: 40px;
   }
 
   .additionally__list {
@@ -38,6 +61,11 @@
     align-items: center;
     justify-content: space-between;
     flex-wrap: wrap;
+    padding: 65px 0;
+  }
+
+  .additionally__item {
+    width: 50%;
   }
 }
 
@@ -45,5 +73,9 @@
   .additionally__item {
     margin-bottom: 0;
     width: auto;
+  }
+
+  .additionally__list {
+    padding: 60px 0;
   }
 }
