--- a/source/less/program-selection.less
+++ b/source/less/program-selection.less
@@ -1,5 +1,9 @@
+.program-selection {
+  overflow: hidden;
+}
+
 .program-selection__wrapper {
-  padding: 27px 20px 32px 20px;
+  padding: 27px 0 32px 0;
   background-color: @white;
 }
 
@@ -10,6 +14,8 @@
   line-height: 36px;
   color: @black;
   margin: 0;
+  padding-left: 20px;
+  padding-right: 20px;
 }
 
 .program-selection__subtitle {
@@ -21,6 +27,8 @@
   color: @black;
   margin: 0;
   margin-top: 37px;
+  padding-left: 20px;
+  padding-right: 20px;
 }
 
 .program-selection__questionnaire {
@@ -31,6 +39,7 @@
 @media (min-width: @tablet-width) {
   .program-selection__wrapper {
     padding: 75px 70px;
+    overflow: hidden;
   }
 
   .program-selection__title {
