--- a/source/less/catalog-program.less
+++ b/source/less/catalog-program.less
@@ -177,7 +177,8 @@
 
 @media (min-width: @desktop-width) {
   .catalog-program__wrapper {
-    padding: 164px 110px 71px 110px;
+    padding: 80px 110px 71px 110px;
+    margin-top: 165px;
   }
 
   .catalog-program__list {
