--- a/source/less/product-card.less
+++ b/source/less/product-card.less
@@ -89,11 +89,11 @@
   .product-card__icon {
     align-self: center;
     margin-top: -80px;
-    margin-bottom: 34px;
+    margin-bottom: 45px;
   }
 
   .product-card__wrapper-icon {
-    min-height: 160px;
+    height: 160px;
   }
 }
 
