прописала переменные для цветов

--- a/source/less/live-example.less
+++ b/source/less/live-example.less
@@ -104,5 +104,10 @@
 
   .live-example__statistic {
     margin-left: 110px;
+    margin-bottom: 75px;
+  }
+
+  .live-example__cat-comparison {
+    margin-top: -266px;
   }
 }
