--- a/source/less/main-nav.less
+++ b/source/less/main-nav.less
@@ -48,7 +48,7 @@
   top: 15px;
   left: 17px;
   height: 66px;
-  background-color: #ffffff;
+  background-color: @white;
 }
 
 .main-nav--opened .main-nav__burger {
