--- a/source/less/module.less
+++ b/source/less/module.less
@@ -16,6 +16,10 @@
   color: @text-grey;
   margin-top: 15px;
   margin-bottom: -14px;
+  padding: 0 10px;
+  margin-right: auto;
+  margin-left: auto;
+  background-color: @grey-light;
 }
 
 .module__text--result {
@@ -38,7 +42,7 @@
 
 .module__description:not(:last-child) {
   flex-direction: column;
-  border: 1px solid #cdcdcd;
+  border: 1px solid @special-grey;
   box-sizing: border-box;
   padding-top: 14px;
   border-radius: 3px;
