--- a/source/less/purpose-program.less
+++ b/source/less/purpose-program.less
@@ -25,7 +25,7 @@
 @media (min-width: @tablet-width) {
   .purpose-program__form {
     padding: 25px 28px;
-    border: 1px solid #e7e7e7;
+    border: 1px solid @grey-border;
     margin-top: 60px;
   }
 
