--- a/source/less/utils/colors.less
+++ b/source/less/utils/colors.less
@@ -7,3 +7,7 @@
 @white: #ffffff;
 @black: #000000;
 @color-border: #d9d9d9;
+@grey-light: #eaeaea;
+@grey-color: #d3d3d3;
+@black-special: #111111;
+@grey-border: #e7e7e7;
