--- a/source/less/additionally.less
+++ b/source/less/additionally.less
@@ -51,7 +51,7 @@
     width: 100%;
     height: 2px;
     top: 50%;
-    background-color: #68b738;
+    background-color: @basic-green;
     right: 100%;
     margin-right: 40px;
   }
