--- a/source/less/all-catalog.less
+++ b/source/less/all-catalog.less
@@ -45,7 +45,7 @@
   position: absolute;
   width: 2px;
   height: 30px;
-  background-color: #d3d3d3;
+  background-color: @grey-color;
   top: 25px;
   left: 50%;
 }
@@ -55,7 +55,7 @@
   position: absolute;
   width: 30px;
   height: 2px;
-  background-color: #d3d3d3;
+  background-color: @grey-color;
   top: 40px;
   left: calc(50% - 15px);
 }
