--- a/source/less/cat-data.less
+++ b/source/less/cat-data.less
@@ -18,7 +18,7 @@
 
 .cat-data__name-form {
   box-sizing: border-box;
-  border: 1px solid #e7e7e7;
+  border: 1px solid @grey-border;
   padding-top: 13px;
   padding-bottom: 14px;
   padding-left: 15px;
