--- a/source/less/comment.less
+++ b/source/less/comment.less
@@ -16,7 +16,7 @@
   line-height: 18px;
   text-transform: uppercase;
   color: @text-grey;
-  border: 1px solid #e7e7e7;
+  border: 1px solid @grey-border;
   box-sizing: border-box;
   padding: 10px 12px;
   width: 100%;
@@ -49,7 +49,7 @@
     width: 100%;
     height: 2px;
     top: 50%;
-    background-color: #68b738;
+    background-color: @basic-green;
     right: 100%;
     margin-right: 40px;
   }
