--- a/source/less/contact.less
+++ b/source/less/contact.less
@@ -62,7 +62,7 @@
     width: 100%;
     height: 2px;
     top: 50%;
-    background-color: #68b738;
+    background-color: @basic-green;
     right: 100%;
     margin-right: 40px;
   }
