--- a/source/less/questionnaire.less
+++ b/source/less/questionnaire.less
@@ -44,6 +44,11 @@
   margin-bottom: 21px;
 }
 
+.questionnaire__send {
+  margin-left: 20px;
+  margin-right: 20px;
+}
+
 .questionnaire__required-form {
   margin: 0;
   font-family: "Arial", sans-serif;
@@ -93,6 +98,7 @@
   .questionnaire__send {
     display: flex;
     align-items: center;
+    margin: 0;
   }
 }
 
@@ -130,6 +136,7 @@
     padding: 0;
     grid-row: 5;
     grid-column: 1/3;
+    margin: 0;
   }
 
   .questionnaire__send-form {
