базовые стили для котов до и после

--- a/source/less/style.less
+++ b/source/less/style.less
@@ -19,6 +19,7 @@
 @import "footer-social";
 @import "logotype";
 @import "composition";
+@import "range-bar-mobile";
 
 //страница каталога
 @import "catalog-product-cards";
