--- a/source/less/cat-comparison.less
+++ b/source/less/cat-comparison.less
@@ -12,13 +12,14 @@
 }
 
 .cat-comparison__after {
-
+  display: block;
 }
 
 .cat-comparison__image-before {
   display: block;
   height: 232px;
   width: 280px;
+  background-color: @grey-light;
 }
 
 .cat-comparison__before {
@@ -29,24 +30,34 @@
   }
 }
 
+.cat-comparison__range {
+  display: none;
+}
+
 .cat-comparison__image-after {
   height: 232px;
   width: 280px;
 }
 
 @media (min-width: @tablet-width) {
+  .cat-comparison__range {
+    display: block;
+  }
+
+  .cat-comparison__range-mobile {
+    display: none;
+  }
+
   .cat-comparison__wrapper {
     position: relative;
     width: 592px;
+    height: auto;
     margin: 0 auto;
   }
 
 
   .cat-comparison__before {
-    display: block;
-    position: absolute;
     width: 50%;
-    overflow: hidden;
     background: linear-gradient(@white 52%, @grey-light 48%);
 
     img {
@@ -67,6 +78,7 @@
     display: block;
     height: 511px;
     width: 592px;
+    background-color: transparent;
   }
 
   .cat-comparison__image-after {
