--- a/source/less/module.less
+++ b/source/less/module.less
@@ -92,6 +92,12 @@
   .module__text {
     font-size: 14px;
     line-height: 14px;
+    margin-bottom: -8px;
+    background-color: @white;
+  }
+
+  .module__text--br {
+    display: none;
   }
 
   .module__statistic {
@@ -115,5 +121,9 @@
 
   .module__statistic {
     display: flex;
+  }
+
+  .module__text {
+    background-color: @basic-grey;
   }
 }
