создание svg sprite

--- a/source/less/copyright.less
+++ b/source/less/copyright.less
@@ -7,6 +7,32 @@
   line-height: 18px;
   color: @text-grey;
   text-decoration: none;
+
+  &:hover {
+    color: @text-grey;
+  }
+
+  &:active {
+    color: @text-grey;
+    opacity: 0.3;
+  }
+}
+
+
+.copyright__htmlacademy-logo {
+  display: block;
+  fill: @footer-icon;
+  width: 27px;
+  height: 34px;
+
+  &:hover {
+    fill: @basic-green;
+  }
+
+  &:active {
+    fill: @basic-green;
+    opacity: 0.3;
+  }
 }
 
 @media (min-width: @tablet-width) {
