--- a/source/less/footer-social.less
+++ b/source/less/footer-social.less
@@ -6,6 +6,36 @@
   list-style-type: none;
 }
 
+.footer-social__icon:hover {
+  fill: @basic-green;
+}
+
+.footer-social__icon:active {
+  fill: @basic-green;
+  opacity: 0.3;
+}
+
+.footer-social__icon--vk {
+  display: block;
+  width: 27px;
+  height: 17px;
+  fill: @footer-icon;
+}
+
+.footer-social__icon--yt {
+  display: block;
+  width: 24px;
+  height: 19px;
+  fill: @footer-icon;
+}
+
+.footer-social__icon-tg {
+  display: block;
+  width: 20px;
+  height: 18px;
+  fill: @footer-icon;
+}
+
 .footer-social__item:not(:last-child) {
   margin-right: 26px;
 }
