--- a/source/less/main-nav.less
+++ b/source/less/main-nav.less
@@ -30,6 +30,14 @@
   text-align: center;
 }
 
+.main-nav__burger {
+  fill: @black;
+  width: 24px;
+  height: 18px;
+  stroke: @black;
+  stroke-width: 1.5;
+}
+
 .main-nav__toggle {
   position: absolute;
   top: 25px;
