--- a/source/less/style.less
+++ b/source/less/style.less
@@ -20,6 +20,7 @@
 @import "logotype";
 @import "composition";
 @import "range-bar-mobile";
+@import "footer-logo";
 
 //страница каталога
 @import "catalog-product-cards";
