--- a/source/less/promo.less
+++ b/source/less/promo.less
@@ -74,6 +74,15 @@
   color: @white;
   text-transform: uppercase;
   text-decoration: none;
+
+  &:hover {
+    background-color: @basic-green2;
+  }
+
+  &:active {
+    background-color: @basic-green2;
+    color: rgba(255, 255, 255, 0.3);
+  }
 }
 
 @media (min-width: @tablet-width) {
