--- a/source/less/questionnaire.less
+++ b/source/less/questionnaire.less
@@ -42,6 +42,15 @@
   text-transform: uppercase;
   color: @white;
   margin-bottom: 21px;
+
+  &:hover {
+    background-color: @basic-green2;
+  }
+
+  &:active {
+    background-color: @basic-green2;
+    color: rgba(255, 255, 255, 0.3);
+  }
 }
 
 .questionnaire__send {
