--- a/source/less/all-catalog.less
+++ b/source/less/all-catalog.less
@@ -33,6 +33,15 @@
   text-align: center;
   text-transform: uppercase;
   color: @text-grey;
+
+  &:hover {
+    background-color: @grey-button;
+  }
+
+  &:active {
+    background-color: @grey-button;
+    color: rgba(68, 68, 68, 0.3);
+  }
 }
 
 .all-catalog {
