--- a/source/less/main-header.less
+++ b/source/less/main-header.less
@@ -11,6 +11,26 @@
   display: block;
 }
 
+.main-header__logo-cat {
+  &:hover {
+    opacity: 0.8;
+  }
+
+  &:active {
+    opacity: 0.6;
+  }
+}
+
+.main-header__logo-cat-energy {
+  &:hover {
+    opacity: 0.8;
+  }
+
+  &:active {
+    opacity: 0.6;
+  }
+}
+
 @media (min-width: @tablet-width) {
   .main-header__wrapper {
     padding: 24px 30px 0 30px;
