--- a/source/less/product-card.less
+++ b/source/less/product-card.less
@@ -44,7 +44,7 @@
   text-transform: uppercase;
   text-decoration: none;
   color: @white;
-  background-color: rgba(104, 183, 56, 1);
+  background-color: @basic-green;
   min-height: 40px;
   width: 100%;
   border: none;
@@ -52,6 +52,15 @@
   padding-bottom: 10px;
   margin-top: 22px;
   margin-bottom: 25px;
+
+  &:hover {
+    background-color: @basic-green2;
+  }
+
+  &:active {
+    background-color: @basic-green2;
+    color: rgba(255, 255, 255, 0.3);
+    }
 }
 
 @media (min-width: @tablet-width) {
