добавила состояния для элементов

--- a/source/less/collaboration.less
+++ b/source/less/collaboration.less
@@ -3,6 +3,10 @@
   background-color: @basic-grey;
 }
 
+.collaboration__wrapper.collaboration__wrapper--index {
+  background-color: @white;
+}
+
 .collaboration__title {
   margin: 0;
   font-family: inherit;
@@ -40,6 +44,10 @@
   .collaboration__invitation {
     padding: 55px 60px;
     background-color: @basic-grey;
+  }
+
+  .collaboration__invitation.collaboration__invitation--index {
+    background-color: @white;
   }
 }
 
