--- a/source/less/footer.less
+++ b/source/less/footer.less
@@ -17,15 +17,12 @@
 }
 
 .footer__logo {
-  margin-top: 39px;
-  margin-bottom: 32px;
+  padding-top: 39px;
+  padding-bottom: 32px;
   text-align: center;
-}
-
-.footer__social {
-  margin-bottom: 20px;
-  margin-top: 20px;
-  padding: 3px 4px 2px 2px;
+  border-bottom: 1px solid @color-border;
+  margin-right: 20px;
+  margin-left: 20px;
 }
 
 .footer__copyright {
@@ -47,6 +44,7 @@
     margin: 0;
     padding: 0;
     text-align: center;
+    border-bottom: none;
   }
 
   .footer__social {
