--- a/source/less/catalog-program.less
+++ b/source/less/catalog-program.less
@@ -6,6 +6,9 @@
 .catalog-program__item {
   background-color: rgba(242, 242, 242, 1);
   padding: 24px 33px 18px 20px;
+}
+
+.catalog-program__item:not(:last-child) {
   margin-bottom: 20px;
 }
 
@@ -57,35 +60,54 @@
 }
 
 .catalog-program__text {
-  margin: 0 0 38px 0;
+  margin: 0;
+  margin-bottom: 20px;
   font-family: "Arial", sans-serif;
   font-weight: 400;
   font-size: 14px;
   line-height: 18px;
   color: @text-grey;
+  padding-bottom: 23px;
+  border-bottom: 1px solid @color-border;
 }
 
 .catalog-program__toggle {
-  position: relative;
+  display: flex;
+  min-width: 140px;
   cursor: pointer;
-  font-family: inherit;
-  font-weight: 400;
-  font-size: 16px;
-  line-height: 16px;
-  text-align: center;
-  text-transform: uppercase;
-  color: @black;
   text-decoration: none;
-}
 
-.catalog-program__toggle::before {
-  content: "";
-  position: absolute;
-  width: 24px;
-  height: 12px;
-  top: 6px;
-  left: 100px;
-  background-image: url("../img/arrow.svg");
+  &:hover .catalog-program__arrow {
+    background-image: url("../img/arrow-2.svg");
+  }
+
+  &:active {
+    opacity: 0.3;
+
+    .catalog-program__arrow {
+      background-image: url("../img/arrow-2.svg");
+    }
+  }
+
+  .catalog-program__name {
+    font-family: inherit;
+    font-weight: 400;
+    font-size: 16px;
+    line-height: 16px;
+    text-align: center;
+    text-transform: uppercase;
+    color: @black;
+    text-decoration: none;
+  }
+
+  .catalog-program__arrow {
+    margin-left: 15px;
+    background-image: url("../img/arrow.svg");
+    background-repeat: no-repeat;
+    background-position: center;
+    background-size: auto;
+    min-width: 38px;
+  }
 }
 
 //ПЛАНШЕТ
@@ -160,16 +182,6 @@
     line-height: 30px;
   }
 
-  .catalog-program__toggle::before {
-    content: "";
-    position: absolute;
-    width: 24px;
-    height: 12px;
-    top: 10px;
-    left: 133px;
-    background-image: url(" ../img/arrow.svg ");
-  }
-
   .catalog-program__wrapper-title {
     margin: 0;
   }
@@ -214,16 +226,6 @@
   .catalog-program__toggle {
     font-size: 20px;
     line-height: 30px;
-  }
-
-  .catalog-program__toggle::before {
-    content: "";
-    position: absolute;
-    width: 24px;
-    height: 12px;
-    top: 9px;
-    left: 136px;
-    background-image: url(" ../img/arrow.svg ");
   }
 
   .catalog-program__icon-tablet {
