--- a/source/less/promo.less
+++ b/source/less/promo.less
@@ -25,7 +25,6 @@
 
 .promo__wrapper {
   position: relative;
-  padding-bottom: 22px;
   text-align: center;
   color: @white;
 }
@@ -41,7 +40,7 @@
 }
 
 .promo__subtitle {
-  margin-top: 25px;
+  margin-top: 5px;
   margin-bottom: 29px;
   font-family: inherit;
   font-weight: 400;
@@ -66,11 +65,12 @@
   margin-left: 20px;
   background-color: @basic-green;
   font-family: inherit;
-  padding: 7px 44px;
+  padding-top: 7px;
+  padding-bottom: 7px;
   font-size: 14px;
   font-weight: 400;
   line-height: 18px;
-  text-align: center;
+
   color: @white;
   text-transform: uppercase;
   text-decoration: none;
