декор для чекбоксов

--- a/source/less/all-catalog.less
+++ b/source/less/all-catalog.less
@@ -47,6 +47,8 @@
 .all-catalog {
   position: relative;
   padding: 78px 0 25px 0;
+  border-top: 1px solid @grey-button;
+  border-bottom: 1px solid @grey-button;
 }
 
 .all-catalog::before {
