--- a/source/less/main-nav.less
+++ b/source/less/main-nav.less
@@ -14,6 +14,11 @@
   background-color: @white;
 }
 
+.main-nav__item {
+  border-top: 1px solid @border-nav;
+  border-bottom: 1px solid @border-nav;
+}
+
 .main-nav__link {
   padding-top: 22px;
   padding-bottom: 24px;
@@ -122,6 +127,7 @@
 
   .main-nav__item {
     width: auto;
+    border: none;
   }
 
   .main-nav__link {
