--- a/source/less/program-selection.less
+++ b/source/less/program-selection.less
@@ -5,6 +5,7 @@
 .program-selection__wrapper {
   padding: 27px 0 32px 0;
   background-color: @white;
+  border-top: 1px solid @color-border;
 }
 
 .program-selection__title {
@@ -40,6 +41,7 @@
   .program-selection__wrapper {
     padding: 75px 70px;
     overflow: hidden;
+    border-top: none;
   }
 
   .program-selection__title {
