--- a/source/less/utils/colors.less
+++ b/source/less/utils/colors.less
@@ -14,4 +14,7 @@
 @footer-icon: #666666;
 @basic-green2: #5eaa2f;
 @grey-button: #ebebeb;
+@border-nav: #e6e6e6;
+@error: #ff8282;
+@grey-2: #bababa;
 
