--- a/source/less/catalog-product-cards.less
+++ b/source/less/catalog-product-cards.less
@@ -6,12 +6,17 @@
 .catalog-product-cards__title {
   margin: 0;
   padding-top: 27px;
+  padding-bottom: 41px;
   font-family: inherit;
   font-weight: 400;
   font-size: 36px;
   line-height: 36px;
   color: @black;
-  margin-bottom: 41px;
+  border-bottom: 1px solid @color-border;
+  border-top: 1px solid @grey-button;
+  margin-left: -20px;
+  margin-right: -20px;
+  padding-left: 20px;
 }
 
 .catalog-product-cards__list {
@@ -35,6 +40,7 @@
     line-height: 60px;
     margin: 0;
     padding: 0;
+    border: none;
   }
 
   .catalog-product-cards__list {
