--- a/source/less/contact.less
+++ b/source/less/contact.less
@@ -35,6 +35,7 @@
 }
 
 .contact__input {
+  box-sizing: border-box;
   padding: 14px 16px;
   font-family: inherit;
   font-weight: 400;
@@ -43,6 +44,30 @@
   text-transform: uppercase;
   color: @text-grey;
   width: 100%;
+
+  &:hover {
+    border: 1px solid @special-grey;
+  }
+
+  &:focus {
+    outline: 2px solid @text-grey;
+  }
+
+  &:invalid {
+    outline: 2px solid @error;
+  }
+}
+
+.contact__input--email {
+  background-image: url("../img/icon-email.svg");
+  background-repeat: no-repeat;
+  background-position: right 15px center;
+}
+
+.contact__input--phone {
+  background-image: url("../img/icon-phone.svg");
+  background-repeat: no-repeat;
+  background-position: right 13px center;
 }
 
 @media (min-width: @tablet-width) {
