декор для radio

--- a/source/less/additionally.less
+++ b/source/less/additionally.less
@@ -101,6 +101,20 @@
 
   .additionally__item {
     width: 50%;
+    margin-bottom: 42px;
+  }
+
+  .additionally__mark {
+    width: 40px;
+    height: 40px;
+  }
+
+  .additionally__description {
+    padding-left: 19px;
+  }
+
+  .additionally__label {
+    padding-left: 19px;
   }
 }
 
