--- a/source/less/purpose-program.less
+++ b/source/less/purpose-program.less
@@ -20,13 +20,50 @@
 .purpose-program__item {
   margin: 0;
   margin-bottom: 25px;
+
+  &:active {
+    opacity: 0.3;
+  }
+}
+
+.purpose-program__label {
+  position: relative;
+}
+
+.purpose-program__mark {
+  position: absolute;
+  width: 30px;
+  height: 30px;
+  background-color: @white;
+  border-radius: 50%;
+  top: 0;
+  left: 0;
+  border: 1px solid @special-grey;
+
+  &:hover {
+    border: 1px solid @grey-2;
+  }
+}
+
+.purpose-program__form[type="radio"]:checked + .purpose-program__mark::after {
+  position: absolute;
+  content: "";
+  height: 13.5px;
+  width: 13.5px;
+  border-radius: 50%;
+  background-color: @basic-green;
+  top: 8px;
+  left: 8px;
+}
+
+.purpose-program__name {
+  padding-left: 30px;
 }
 
 @media (min-width: @tablet-width) {
   .purpose-program__form {
     padding: 25px 28px;
     border: 1px solid @grey-border;
-    margin-top: 60px;
   }
 
   .purpose-program__list {
@@ -36,6 +73,22 @@
 
   .purpose-program__item {
     margin-bottom: 23px;
+  }
+
+  .purpose-program__mark {
+    width: 40px;
+    height: 40px;
+  }
+
+  .purpose-program__form[type="radio"]:checked + .purpose-program__mark::after {
+    height: 18px;
+    width: 18px;
+    top: 11px;
+    left: 11px;
+  }
+
+  .purpose-program__name {
+    padding-left: 60px;
   }
 }
 
