--- a/source/less/module.less
+++ b/source/less/module.less
@@ -38,6 +38,8 @@
 
 .module__description--result {
   margin-top: 34px;
+  padding-left: 20px;
+  padding-right: 20px;
 }
 
 .module__description:not(:last-child) {
@@ -78,6 +80,7 @@
     align-items: end;
     align-self: center;
     margin-left: auto;
+    padding: 0;
   }
 
   .module__text--result {
